修复一些bug，添加NiceNineImageLayout ；
仿Nice首页图片列表9图样式，并实现拖拽效果

--- a/LIgnorance/src/main/res/layout/activity_test_color_track_view.xml
+++ b/LIgnorance/src/main/res/layout/activity_test_color_track_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
@@ -15,9 +16,7 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tl_tab"
         style="@style/_TabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_40dp"
-        android:background="@color/background" />
+        app:tabMaxWidth="@dimen/width_60dp" />
 
     <com.livelearn.ignorance.widget.viewpager.SwipeBackViewPager
         android:id="@+id/vp_pager"
