--- a/LIgnorance/src/main/res/layout/activity_test_transferee.xml
+++ b/LIgnorance/src/main/res/layout/activity_test_transferee.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <com.livelearn.ignorance.widget.ninegridlayout.SimpleNineGridView
+    <com.livelearn.ignorance.widget.ninegridlayout.simpleninegrid.SimpleNineGridView
         android:id="@+id/sngv_nine_grid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
