--- a/LIgnorance/src/main/res/layout/adapter_simple_nine_grid_view.xml
+++ b/LIgnorance/src/main/res/layout/adapter_simple_nine_grid_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.livelearn.ignorance.widget.ninegridlayout.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.livelearn.ignorance.widget.ninegridlayout.simpleninegrid.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,4 +11,4 @@
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         tools:ignore="ContentDescription" />
-</com.livelearn.ignorance.widget.ninegridlayout.SquareLayout>
+</com.livelearn.ignorance.widget.ninegridlayout.simpleninegrid.SquareLayout>
