--- a/LIgnorance/src/main/res/layout/viewholder_test_nine_grid_layout.xml
+++ b/LIgnorance/src/main/res/layout/viewholder_test_nine_grid_layout.xml
@@ -36,7 +36,7 @@
             android:text="今天天气真好，好开心！你若安好便是晴天！"
             tools:ignore="HardcodedText" />
 
-        <com.livelearn.ignorance.widget.ninegridlayout.ninegrid.NineGridLayout
+        <com.livelearn.ignorance.widget.ninegridimagelayout.ninegridlayout.NineGridLayout
             android:id="@+id/ngl_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
