--- a/LIgnorance/src/main/res/layout/item_tab_color_track.xml
+++ b/LIgnorance/src/main/res/layout/item_tab_color_track.xml
@@ -7,6 +7,6 @@
     android:paddingEnd="@dimen/margin_10dp"
     android:paddingStart="@dimen/margin_10dp"
     app:ctv_text="推荐"
-    app:ctv_text_change_color="@color/purple"
+    app:ctv_text_change_color="@color/color_pale"
     app:ctv_text_origin_color="@color/color_dark_black"
     app:ctv_text_size="@dimen/text_size_18sp" />
