--- a/LIgnorance/src/main/res/values/styles_view.xml
+++ b/LIgnorance/src/main/res/values/styles_view.xml
@@ -453,20 +453,21 @@
     <style name="_SmartTabLayout_PureTextTab_Smart">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/height_40dp</item>
-        <item name="android:background">@color/white</item>
-        <item name="stl_defaultTabTextColor">@color/selector_selectedpurple_normalgray</item>
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="stl_defaultTabTextColor">@color/selector_selectedpale_normalblack</item>
         <item name="stl_defaultTabTextSize">@dimen/text_size_16sp</item>
         <item name="stl_defaultTabTextHorizontalPadding">@dimen/margin_15dp</item>
         <item name="stl_defaultTabBackground">@color/transparent</item>
         <item name="stl_distributeEvenly">true</item>
-        <item name="stl_dividerColor">@color/divider</item>
-        <item name="stl_dividerThickness">1px</item>
-        <item name="stl_indicatorColor">@color/purple</item>
+        <item name="stl_dividerColor">@color/transparent</item>
+        <item name="stl_dividerThickness">0dp</item>
+        <item name="stl_indicatorColor">@color/color_pink</item>
         <item name="stl_indicatorCornerRadius">0dp</item>
         <item name="stl_indicatorGravity">bottom</item>
         <item name="stl_indicatorInterpolation">smart</item>
         <item name="stl_indicatorThickness">@dimen/height_2dp</item>
-        <item name="stl_overlineColor">@color/divider</item>
+        <item name="stl_overlineColor">@color/transparent</item>
+        <item name="stl_overlineThickness">0dp</item>
         <item name="stl_underlineColor">@color/transparent</item>
         <item name="stl_underlineThickness">0dp</item>
         <item name="stl_titleOffset">auto_center</item>
