--- a/LIgnorance/src/main/res/layout/activity_main.xml
+++ b/LIgnorance/src/main/res/layout/activity_main.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
     android:clipToPadding="true"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
-    <include layout="@layout/content_main" />
-</android.support.design.widget.CoordinatorLayout>
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <include layout="@layout/content_main" />
+
+    </android.support.design.widget.CoordinatorLayout>
+
+    <com.livelearn.ignorance.widget.smarttablayout.SmartTabLayout
+        android:id="@+id/stl_tab"
+        style="@style/_SmartTabLayout_PureTextTab_Linear"
+        android:layout_height="64dp"
+        android:background="@color/background" />
+</LinearLayout>
