--- a/LIgnorance/src/main/res/layout/view_long_time_book.xml
+++ b/LIgnorance/src/main/res/layout/view_long_time_book.xml
@@ -13,6 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
             android:baselineAligned="false"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -32,7 +33,6 @@
                 android:id="@+id/ll_book_category"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@color/white"
                 android:gravity="center">
 
                 <ImageView
