--- a/LIgnorance/src/main/res/layout/activity_main.xml
+++ b/LIgnorance/src/main/res/layout/activity_main.xml
@@ -2,19 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
-    android:clipToPadding="true"
-    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <android.support.design.widget.CoordinatorLayout
+    <include
+        layout="@layout/content_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <include layout="@layout/content_main" />
-
-    </android.support.design.widget.CoordinatorLayout>
+        android:layout_weight="1" />
 
     <com.livelearn.ignorance.widget.smarttablayout.SmartTabLayout
         android:id="@+id/stl_tab"
