--- a/LIgnorance/src/main/res/layout/fragment_mine.xml
+++ b/LIgnorance/src/main/res/layout/fragment_mine.xml
@@ -1,94 +1,100 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background"
-    android:orientation="vertical">
-
-    <FrameLayout
-        android:id="@+id/fl_has_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background_white"
-        android:padding="@dimen/margin_16dp"
-        android:visibility="gone">
-
-        <com.livelearn.ignorance.widget.InsLoadingView
-            android:id="@+id/iv_avatar"
-            android:layout_width="@dimen/width_100dp"
-            android:layout_height="@dimen/height_100dp"
-            android:layout_gravity="center_vertical"
-            app:ilv_end_color="@color/color_light_purple"
-            app:ilv_start_color="@color/color_pink"
-            app:ilv_status="loading"
-            app:srcCompat="@drawable/shape_circle_solidlightgray" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_100dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="110dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_nickname"
-                style="@style/_20sp_BlackText"
-                android:text="艾斯德斯"
-                tools:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/tv_personalized_signature"
-                style="@style/_15sp_BlackText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/margin_5dp"
-                android:ellipsize="end"
-                android:gravity="fill_horizontal"
-                android:lineSpacingExtra="@dimen/margin_3dp"
-                android:maxLines="2"
-                android:visibility="gone"
-                tools:ignore="HardcodedText" />
-        </LinearLayout>
-    </FrameLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/ll_not_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background_white"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="@dimen/margin_16dp"
-        android:visibility="gone">
-
-        <am.widget.shapeimageview.ShapeImageView
-            android:id="@+id/iv_avatar_not_login"
-            style="@style/_ShapeImageView_Circle_radius50dp"
-            android:layout_width="@dimen/width_100dp"
-            android:layout_height="@dimen/height_100dp"
-            android:src="@drawable/shape_circle_solidlightgray" />
-
-        <Button
-            android:id="@+id/btn_login_register"
-            style="@style/_Button_Background_LightPurpleDarkPurple_Text_PaleTranslucentPale"
-            android:layout_width="@dimen/width_100dp"
-            android:layout_height="@dimen/height_30dp"
-            android:layout_marginStart="@dimen/margin_16dp"
-            android:text="登录/注册"
-            android:textSize="@dimen/text_size_15sp"
-            tools:ignore="HardcodedText" />
-    </LinearLayout>
-
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
+        android:background="@color/background"
+        android:orientation="vertical">
 
-        <com.maiml.library.BaseItemLayout
-            android:id="@+id/bil_base_item_layout"
+        <FrameLayout
+            android:id="@+id/fl_has_login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:background="@color/background_white"
+            android:padding="@dimen/margin_16dp"
+            android:visibility="gone">
+
+            <com.livelearn.ignorance.widget.InsLoadingView
+                android:id="@+id/iv_avatar"
+                android:layout_width="@dimen/width_100dp"
+                android:layout_height="@dimen/height_100dp"
+                android:layout_gravity="center_vertical"
+                app:ilv_end_color="@color/color_light_purple"
+                app:ilv_start_color="@color/color_pink"
+                app:ilv_status="loading"
+                app:srcCompat="@drawable/shape_circle_solidlightgray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_100dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="110dp"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_nickname"
+                    style="@style/_20sp_BlackText"
+                    android:text="艾斯德斯"
+                    tools:ignore="HardcodedText" />
+
+                <TextView
+                    android:id="@+id/tv_personalized_signature"
+                    style="@style/_15sp_BlackText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/margin_5dp"
+                    android:ellipsize="end"
+                    android:gravity="fill_horizontal"
+                    android:lineSpacingExtra="@dimen/margin_3dp"
+                    android:maxLines="2"
+                    android:visibility="gone"
+                    tools:ignore="HardcodedText" />
+            </LinearLayout>
+        </FrameLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_not_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background_white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="@dimen/margin_16dp"
+            android:visibility="gone">
+
+            <am.widget.shapeimageview.ShapeImageView
+                android:id="@+id/iv_avatar_not_login"
+                style="@style/_ShapeImageView_Circle_radius50dp"
+                android:layout_width="@dimen/width_100dp"
+                android:layout_height="@dimen/height_100dp"
+                android:src="@drawable/shape_circle_solidlightgray" />
+
+            <Button
+                android:id="@+id/btn_login_register"
+                style="@style/_Button_Background_LightPurpleDarkPurple_Text_PaleTranslucentPale"
+                android:layout_width="@dimen/width_100dp"
+                android:layout_height="@dimen/height_30dp"
+                android:layout_marginStart="@dimen/margin_16dp"
+                android:text="登录/注册"
+                android:textSize="@dimen/text_size_15sp"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none">
+
+            <com.maiml.library.BaseItemLayout
+                android:id="@+id/bil_base_item_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </ScrollView>
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
