添加豆瓣图书收藏；

--- a/LIgnorance/src/main/res/layout/fragment_dou_ban_book_collection.xml
+++ b/LIgnorance/src/main/res/layout/fragment_dou_ban_book_collection.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.livelearn.ignorance.ui.view.mine.DouBanBookCollectionView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/v_dou_ban_book_collection"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-</LinearLayout>
+    android:layout_height="match_parent" />
