--- a/LIgnorance/src/main/res/layout/view_book_collection.xml
+++ b/LIgnorance/src/main/res/layout/view_book_collection.xml
@@ -6,4 +6,5 @@
     android:layout_height="match_parent"
     app:layout_empty="@layout/custom_view_empty_easy_recycler_view"
     app:layout_error="@layout/custom_view_error_easy_recycler_view"
-    app:layout_progress="@layout/custom_view_loading_easy_recycler_view" />
+    app:layout_progress="@layout/custom_view_loading_easy_recycler_view"
+    app:recyclerPaddingTop="@dimen/margin_10dp" />
